# clickcrate

./: .gitignore  README.md
clickcrate-dashboard/: .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  types.ts
clickcrate-dashboard/components/: CustomWalletButton.tsx  ExplorerLink.tsx  Header.tsx  ImageUploadMini.tsx  Layout.tsx  ReactQueryProvider.tsx  Sidebar.tsx  TransactionToast.tsx  UiLayout.tsx
clickcrate-dashboard/hooks/: useRequestAirdrop.ts  useTransferSol.ts
clickcrate-dashboard/pages/: _app.tsx  account.tsx  clickcrates.tsx  create.tsx  index.tsx  orders.tsx
clickcrate-dashboard/program/: clickcrate_program.json  clickcrate_program.ts
clickcrate-dashboard/services/: clickcrateApi.ts  createService.ts  solanaService.ts  uploadService.ts
clickcrate-program/: Anchor.toml  README.md
clickcrate-program/programs/clickcrate-program/: Cargo.toml
clickcrate-program/programs/clickcrate-program/src/: constants.rs  lib.rs
clickcrate-program/programs/clickcrate-program/src/instructions/: activate_clickcrate.rs  activate_product_listing.rs  close_oracle.rs  complete_order.rs  deactivate_clickcrate.rs  deactivate_product_listing.rs  initialize_oracle.rs  make_purchase.rs  mod.rs  place_products.rs  register_clickcrate.rs  register_product_listing.rs  remove_products.rs  update_clickcrate.rs  update_order_status.rs  update_product_listing.rs
clickcrate-program/programs/clickcrate-program/src/state/: clickcrate.rs  enums.rs  mod.rs  order_oracle.rs  product_listing.rs  utils.rs  vault.rs
(+74 files in other folders)
