[package]
name = "clickcrate-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "clickcrate_program"

[features]
default = ["custom-heap"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []

[dependencies]
anchor-lang = "0.30.1"
mpl-core = "0.7.2"
smalloc = "0.1.2"
solana-program = "1.18.17"
